fix: loading.svg not centered

--- a/packages/vivi-lib/src/assets/scss/base/reset.scss
+++ b/packages/vivi-lib/src/assets/scss/base/reset.scss
@@ -36,3 +36,7 @@ img,
 video {
 	max-width: unset;
 }
+
+svg {
+	display: initial;
+}
